phpmd-0.2.5 (2010/0
========================

- Fixed #16: Alternative syntax for properties in rule set files
  implemented. Fixed in svn revision #220
- Fixed #17: Do not return success exit code when PHPMD detects rule
  violations in analyzed source code. Fixed in svn revision #226.
- Fixed #19: Super globals were detected as unused variables.Fixed in
  svn revision #218
- Fixed #20: Local static variables were treated as unused variables.
  Fixed in svn revision #219.

phpmd-0.2.4 (2010/03/08)
========================

- E_NOTICE bug fix in naming rule.

phpmd-0.2.3 (2010/03/04)
========================

- Fixed #6: PHP Tokenizer required but no error when installing.
- Fixed #7: UnusedLocalVariable ruleset incorrectly flags variables
  as unused when used inside double quoted string. Fixed in svn
  revision #187.
- Implemented #9: Add support for "Suppress warnings" annotations.
  Implemented in svn revision #200.
- Implemented #10: Support for exclude element in rule-set files added.
  Implemented in svn revision #189.
- Implemented #13: Implement naming rules, e.g. short variables, parameter
  etc.
- Fixed #14: ExcessivePublicCount rule should utilize PHP_Depend's cis
  metric. Fixed in svn revision #203.
- Fixed #15: ExcessivePublicCount rule is never used. Fixed in svn
  revision #202.

phpmd-0.2.2 (2010/01/20)
========================

- Small change to the command line interface, which did not return an
  exit code != 0 when an exception occured.

phpmd-0.2.1 (2010/01/05)
========================

- Implemented #5: Allow multiple input files/directories. Implemented in svn
  revision #158.
- Tested: Additional unit tests for multiple components added.

phpmd-0.2.0 (2009/12/30)
========================

- Implemented #2: Support for unused code fules completed, implemented in svn
  revision #134.
- Implemented #3: Text renderer implemented.
- Implemented #4: Implement a html renderer, implemented in svn revision #139.
- Several performance improvements.
