@@ -1,6 +1,6 @@
 project.dir=
 project.name=phpmd
-project.version=0.2.4
+project.version=0.2.5
 project.stability=alpha
 
 coding.standard=PEAR
