@@ -34,6 +34,8 @@
     </stability>
     <license uri="http://www.opensource.org/licenses/bsd-license.php">BSD License</license>
     <notes>
+- Implemented #12: Add rule for the Weighted Methods Per Class Metric.
+  Implemented in svn revision #228.
 - Fixed #16: Alternative syntax for properties in rule set files
   implemented. Fixed in svn revision #220.
 - Fixed #17: Do not return success exit code when PHPMD detects rule
